--- a/CardGame.csproj
+++ b/CardGame.csproj
@@ -8,4 +8,7 @@
   <ItemGroup>
     <Reference Include="System.Runtime.Caching" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Scripts\Game\Models\GameModels\" />
+  </ItemGroup>
 </Project>
